feat: 클린 아키텍쳐 적용